# WindowsOptimizer

./: CMakeLists.txt  README.md  main.cpp
Optimization/: Optimize.cpp
Optimization/Tasks/: SetRegistries.cpp
Optimization/Util/: TemplateParser.cpp
Optimizations/: Profiles.cpp
Optimizations/Tasks/: DisableServices.cpp  SetRegistries.cpp
Samples/: Registry.template.sample  services.template.sample
Templates/: Registry.template  services.template
